manifest/networking/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service
  namespace: networking
spec:
  hosts:
    - "*"               
  gateways:
    - api-gateway   
       
  http:
    - match:
        - uri:
            prefix: "/" 
      route:
        - destination:
            host: blue-service.default.svc.cluster.local
            port:
              number: 9000
